fix overflow problem

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -15,6 +15,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 100%; /* Asegura que no se desborde */
+    overflow: hidden; /* Prevenir desbordamientos */
   }
   
   .aboutImage {
@@ -102,11 +104,20 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease, visibility 0.3s ease;
-  white-space: nowrap;
 }
 
 /* Muestra el tooltip al hacer hover */
 .techIconContainer:hover .tooltip {
   opacity: 1;
   visibility: visible;
+}
+
+/* Ajustes para pantallas más pequeñas */
+@media (max-width: 768px) {
+  .tooltip {
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 200px;
+  }
 }
