--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,8 @@ body {
     background-color: #000;
     color: #fff;
     height: 100vh;
+    overflow-x: auto;
+    width: 100vw;
 }
 
 .appContainer {
